fixes images being squished on some browsers

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,8 @@ hr {
 .characterBox > img {
     width: 144px;
     height: 144px;
+    min-width: 144px;
+    min-height: 144px;
 }
 
 .download {
